syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message Calculator {
    int32 number1 = 1;
    int32 number2 = 2;
}

message CalculatorRequest {
    Calculator values = 1;
}

message CalculatorResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
};

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

service CalculatorService {
    rpc Calculate (CalculatorRequest) returns (CalculatorResponse) {};
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}